[package]
name = "net_hex"
version = "0.8.1-alpha.0"
authors = ["Jack Newman jacknewman12@gmail.com"]
edition = "2018"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hexplay = "0.2.1"
hex = "0.4.3"
structopt = "0.3"
regex = "1.1.7"
crossbeam = "0.8.0"
log = { version = "0.4.6", features = ["max_level_trace", "release_max_level_debug"] }
env_logger = "0.8.3"
pbr = "1.0.1"

[dependencies.pnet]
version = "0.27.2"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
