cargo-features = ["strip"]

[package]
name = "nethex"
version = "0.8.3-alpha.0"
authors = ["Jack Newman jacknewman12@gmail.com"]
edition = "2018"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hexplay = "0.2.1"
hex = "0.4.3"
structopt = "0.3.22"
regex = "1.5.4"
crossbeam = "0.8.1"
log = { version = "0.4.14", features = ["max_level_trace", "release_max_level_debug"] }
env_logger = "0.9.0"
indicatif= "0.16.2"
pnet = "0.28.0"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"
