[package]
name = "nethex"
version = "0.8.4-alpha.1"
authors = ["Jack Newman jacknewman12@gmail.com"]
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hexplay = "0.2.1"
hex = "0.4.3"
structopt = "0.3.26"
regex = "1.6.0"
crossbeam = "0.8.2"
log = { version = "0.4.17", features = ["max_level_trace", "release_max_level_debug"] }
env_logger = "0.10.0"
indicatif= "0.17.1"
pnet = "0.30.0"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"
